--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -45,7 +45,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Gustavo S. Dos Santos</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/GustavoSDS" target="_blank">Gustavo S. Dos Santos</a>.
   </div>
 </body>
 
