Firts commit in bransh version-2

--- a/index.html
+++ b/index.html
@@ -14,39 +14,35 @@
 
 <body>
   <main>
-    <section class="section1">
-      <div class="image">
-        <div id="layer"></div>
-      </div>
-    </section>
     <section class="section2">
-      <h1>Get <span>insights</span> that help your business grow.</h1>
+      <div class="image"></div>
 
-      <p>
-        Discover the benefits of data analytics and make better decisions regarding revenue, customer
-        experience, and overall efficiency.
-      </p>
-      <div class="stats">
-        <div class="stats-details">
-          <div class="amount">10k+</div>
-          <div class="concept">companies</div>
+      <article class="content">
+        <h1>Get <span>insights</span> that help your business <br class="br-mobile"> grow.</h1>
+        <p>
+          Discover the benefits of data <br class="br-mobile">
+          analytics and make <br class="br-desktop"> better decisions <br class="br-mobile">
+          regarding revenue, customer <br class="br-desktop">
+          experience, and overall efficiency.
+        </p>
+        <div class="stats">
+          <div class="stats-details">
+            <div class="amount">10k+</div>
+            <div class="concept last">companies</div>
+          </div>
+          <div class="stats-details">
+            <div class="amount">314</div>
+            <div class="concept">templates</div>
+          </div>
+          <div class="stats-details">
+            <div class="amount last">12m+</div>
+            <div class="concept">queries</div>
+          </div>
         </div>
-        <div class="stats-details">
-          <div class="amount">314</div>
-          <div class="concept">templates</div>
-        </div>
-        <div class="stats-details">
-          <div class="amount last">12m+</div>
-          <div class="concept">queries</div>
-        </div>
-      </div>
+      </article>
     </section>
   </main>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.frontendmentor.io/profile/GustavoSDS" target="_blank">Gustavo S. Dos Santos</a>.
-  </div>
 </body>
 
 </html>
