--- a/index.html
+++ b/index.html
@@ -14,32 +14,30 @@
 
 <body>
   <main>
-    <section class="section2">
-      <div class="image"></div>
+    <div class="images">
+      <img src="/images/image-header-mobile.jpg" alt="image-header-mobile" class="image-mobile">
+      <img src="/images/image-header-desktop.jpg" alt="image-header-desktop" class="image-desktop">
+    </div>
 
-      <article class="content">
-        <h1>Get <span>insights</span> that help your business <br class="br-mobile"> grow.</h1>
-        <p>
-          Discover the benefits of data <br class="br-mobile">
-          analytics and make <br class="br-desktop"> better decisions <br class="br-mobile">
-          regarding revenue, customer <br class="br-desktop">
-          experience, and overall efficiency.
-        </p>
-        <div class="stats">
-          <div class="stats-details">
-            <div class="amount">10k+</div>
-            <div class="concept last">companies</div>
-          </div>
-          <div class="stats-details">
-            <div class="amount">314</div>
-            <div class="concept">templates</div>
-          </div>
-          <div class="stats-details">
-            <div class="amount last">12m+</div>
-            <div class="concept">queries</div>
-          </div>
+    <section>
+      <h1>Get <span>insights</span> that help your business grow.</h1>
+      <p>
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.
+      </p>
+      <div class="stats">
+        <div class="stats-details">
+          <div class="amount">10k+</div>
+          <div class="concept last">companies</div>
         </div>
-      </article>
+        <div class="stats-details">
+          <div class="amount">314</div>
+          <div class="concept">templates</div>
+        </div>
+        <div class="stats-details">
+          <div class="amount last">12m+</div>
+          <div class="concept">queries</div>
+        </div>
+      </div>
     </section>
   </main>
 
